<resources>
    <string name="app_name">AndroidAppForMVCApplication</string>
    <string name="store">Store</string>
    <string name="app_settings">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="profile">Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
