<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/store"
            android:icon="@mipmap/ic_local_mall_black_24dp"
            android:title="@string/store" />

        <item
            android:id="@+id/shopping_cart"
            android:icon="@mipmap/ic_shopping_cart_black_24dp"
            android:title="@string/shopping_cart" />

        <item
            android:id="@+id/login"
            android:icon="@mipmap/ic_person_black_24dp"
            android:title="@string/login" />

        <item
            android:id="@+id/register"
            android:icon="@mipmap/ic_person_add_black_24dp"
            android:title="@string/register" />
    </group>

</menu>